# alglib

./: CMakeLists.txt  README.md
libalglib/: alglibversion.template
